Update pom for snapshots to maven central